# ChangeLog for eclass directory
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.671 2013/02/10 11:44:00 mgorny Exp $

  10 Feb 2013; Michał Górny <mgorny@gentoo.org> autotools-multilib.eclass,
  multilib-build.eclass:
  Move header checking function into multilib-build for wider reuse.

  10 Feb 2013; Michał Górny <mgorny@gentoo.org> eutils.eclass:
  QA-warn if epunt_cxx does not find any checks to punt.

  10 Feb 2013; Michał Górny <mgorny@gentoo.org> distutils-r1.eclass:
  Introduce a function to install package for running tests, solving all the
  issues with PyPy, setuptools and namespaces.

  10 Feb 2013; Michał Górny <mgorny@gentoo.org> distutils-r1.eclass:
  Override egg-info write location in out-of-source builds.

  10 Feb 2013; Michał Górny <mgorny@gentoo.org> distutils-r1.eclass:
  Error out if "tests" package is installed. This is a common mistake and a
  source of file collisions.

  08 Feb 2013; Michał Górny <mgorny@gentoo.org> vcs-snapshot.eclass:
  Document the src_unpack() function. Requested in bug #456160.

  08 Feb 2013; Michael Palimaka <kensington@gentoo.org> cmake-utils.eclass:
  Bump CMake minimum version to latest stable.

  08 Feb 2013; Patrick Lauer <patrick@gentoo.org> distutils.eclass:
  Fixing confusing message in distutils.eclass

  07 Feb 2013; Michael Palimaka <kensington@gentoo.org> cmake-utils.eclass:
  Export src_prepare. Improve support for dev-util/ninja wrt bug #439608. Add
  support for CMAKE_DISABLE_FIND_PACKAGE wrt bug #453746.

  07 Feb 2013; Alexey Shvetsov <alexxy@gentoo.org> kde4-base.eclass,
  kde4-functions.eclass, kde4-meta.eclass, kde4-meta-pkg.eclass:
  Version bump KDE SC 4.10.0

  04 Feb 2013; Pacho Ramos <pacho@gentoo.org> readme.gentoo.eclass:
  Add a variable to stop autoformatting when not desired, use '-e' option for
  echo in the autoformatting way to let people control it with sequences